--- a/client/index.html
+++ b/client/index.html
@@ -39,9 +39,9 @@
     <div ui-view=""></div>
     <footer class="footer">
       <div class="container">
-        <p>Angular Fullstack v2.1.0 |
-          <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-          <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+        <p>ngsoundcloud v0.1 |
+          <a href="https://twitter.com/alxundr">@alxundr</a>
+        </p>
       </div>
     </footer>
 
