--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -14,7 +14,7 @@
         <tbody>
         <tr ng-repeat="track in playlist">
           <td>{{track.title}}</td>
-          <td>{{track.user.username}}</td>
+          <td>{{track.username}}</td>
           <td class="text-right">{{track.duration}}</td>
           <td class="text-right"><button class="btn btn-default" ng-click="play(track)"><i class="glyphicon glyphicon-play"></i></button></td>
         </tr>
