--- a/client/app/search/search.html
+++ b/client/app/search/search.html
@@ -2,6 +2,9 @@
 
 <div class="container">
   <div class="row">
+    <alert type="{{alert.type}}" ng-show="alert.show" close="alert.show=false">
+      {{alert.message}}
+    </alert>
     <div class="col-sm-12">
       <form class="form" ng-submit="search()">
         <div class="input-group" id="search-input">
