options to remove tracks and visibility for active track

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
-      <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/player/player.css">
       <link rel="stylesheet" href="app/search/search.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
@@ -86,8 +86,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
-          <script src="app/main/main.controller.js"></script>
-          <script src="app/main/main.js"></script>
+          <script src="app/player/player.controller.js"></script>
+          <script src="app/player/player.js"></script>
           <script src="app/search/search.controller.js"></script>
           <script src="app/search/search.js"></script>
           <script src="app/search/search.service.js"></script>
