added option to see other people's playlist

--- a/client/app/player/player.html
+++ b/client/app/player/player.html
@@ -4,7 +4,7 @@
     <alert type="{{alert.type}}" ng-show="alert.show" close="alert.show=false">
       {{alert.message}}
     </alert>
-    <div class="col-sm-12">
+    <div class="col-sm-12" id="playlist">
       <table class="table table-hover">
         <thead>
         <tr>
