--- a/client/app/search/search.html
+++ b/client/app/search/search.html
@@ -23,10 +23,10 @@
     <table class="table" ng-show="tracks">
       <thead>
         <tr>
-          <th class="col-sm-7">Track</th>
+          <th class="col-sm-6">Track</th>
           <th class="col-sm-3">User</th>
           <th class="col-sm-1 text-right">Length</th>
-          <th class="col-sm-1"></th>
+          <th class="col-sm-2"></th>
         </tr>
       </thead>
       <tbody>
@@ -34,7 +34,10 @@
           <td>{{track.title}}</td>
           <td>{{track.username}}</td>
           <td class="text-right">{{track.duration}}</td>
-          <td class="text-right"><button class="btn btn-default" ng-click="addToPlaylist(track)">Add</button></td>
+          <td class="text-right">
+            <button class="btn btn-default" ng-click="addToPlaylist(track)">Add</button>
+            <button class="btn btn-default" ng-click="addAndPlay(track)"><i class="glyphicon glyphicon-play"></i></button>
+          </td>
         </tr>
       </tbody>
     </table>
