--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/people/people.css">
       <link rel="stylesheet" href="app/player/player.css">
       <link rel="stylesheet" href="app/search/search.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -88,6 +89,9 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/people/people.controller.js"></script>
+          <script src="app/people/people.js"></script>
+          <script src="app/people/playlist/people.playlist.controller.js"></script>
           <script src="app/player/player.controller.js"></script>
           <script src="app/player/player.js"></script>
           <script src="app/search/search.controller.js"></script>
