--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
 
     <!-- Add your site or application content here -->
     <div ng-include="'components/navbar/navbar.html'"></div>
-    <div id="player"></div>
+    <div id="player" class="navbar-fixed-top"></div>
     <div ui-view=""></div>
     <footer class="footer">
       <div class="container">
